--- a/paint2/paint2.csproj
+++ b/paint2/paint2.csproj
@@ -87,5 +87,8 @@
   <ItemGroup>
     <None Include="Resources\Circle.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Polygon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
